--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -841,6 +841,9 @@ desktop/views/pages/tag.vue:
   left-quote: "「"
   right-quote: "」"
   
+desktop/views/pages/welcome.vue:
+  powered-by-misskey: "Powered by <b>Misskey</b>."
+  
 desktop/views/pages/user-list.users.vue:
   users: "ユーザー"
   add-user: "ユーザーを追加"
