Localized mobile/views/pages/reversi.vue
Also added common.name line, as to allow easier rebranding.

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -948,6 +948,10 @@ mobile/views/pages/note.vue:
 mobile/views/pages/notifications.vue:
   notifications: "Notifications"
   read-all: "Do you wish to mark all notifications as read?"
+
+mobile/views/pages/reversi.vue:
+  reversi: "Reversi"
+
 mobile/views/pages/settings/settings.profile.vue:
   title: "Profile"
   name: "Name"
