Translated mobile/views/pages/welcome.vue

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -926,6 +926,13 @@ mobile/views/pages/followers.vue:
   followers-of: "Followers of {}"
 mobile/views/pages/signup.vue:
   lets-start: "Let's start! 📦"
+mobile/views/pages/tag.vue:
+  no-posts-found-japanese: ""
+  no-posts-found-english: "No posts were found for "
+  left-quote: "\""
+  right-quote: "\"."
+mobile/views/pages/welcome.vue:
+  signup: "Sign up."
 mobile/views/pages/following.vue:
   following-of: "Following of {}"
 mobile/views/pages/home.vue:
