--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -318,14 +318,9 @@ common/views/widgets/broadcast.vue:
   next: "次"
 
 common/views/widgets/calendar.vue:
-  year-english: ""
-  year-japanese: "年"
-  month-english: ""
-  month-japanese: "月"
-  day-english: ""
-  day-japanese: "日"
-  weekday-english: ""
-  weekday-japanese: "曜日"
+  year: "{}年"
+  month: "{}月"
+  day: "{}日"
   today: "今日:"
   this-month: "今月:"
   this-year: "今年:"
