--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -867,20 +867,14 @@ desktop/views/pages/selectdrive.vue:
 
 desktop/views/pages/search.vue:
   not-available: "検索機能を利用することができません。"
-  not-found-quotes1: "「"
-  not-found-quotes2: "」"
-  not-found-text-english: ""
-  not-found-text-japanese: "に関する投稿は見つかりませんでした。"
+  not-found: "「{}」に関する投稿は見つかりませんでした。"
 
 desktop/views/pages/share.vue:
   share-with: "Misskeyで共有"
   close: "閉じる"
 
 desktop/views/pages/tag.vue:
-  no-posts-found-english: ""
-  no-posts-found-japanese: "に関する投稿は見つかりませんでした。"
-  left-quote: "「"
-  right-quote: "」"
+  no-posts-found: "ハッシュタグ「{}」が付けられた投稿は見つかりませんでした。"
 
 desktop/views/pages/user-list.users.vue:
   users: "ユーザー"
@@ -1126,10 +1120,7 @@ mobile/views/pages/home.vue:
   global: "グローバル"
 
 mobile/views/pages/tag.vue:
-  no-posts-found-japanese: "に関する投稿は見つかりませんでした。"
-  no-posts-found-english: ""
-  left-quote: "「"
-  right-quote: "」"
+  no-posts-found: "ハッシュタグ「{}」が付けられた投稿は見つかりませんでした。"
 
 mobile/views/pages/welcome.vue:
   signup: "新規登録"
