--- a/locales/en.yml
+++ b/locales/en.yml
@@ -951,10 +951,6 @@ mobile/views/pages/widgets.vue:
   widget-hints: "You can add / delete / rearrange widgets. To move the widget, drag them around. Tap \"x\" to delete a widget. Some widgets can change display size by tapping."
 mobile/views/pages/widgets/activity.vue:
   activity: "Activity"
-=======
-mobile/views/pages/followers.vue:
-  followers-of: "Followers of {}"
->>>>>>> upstream/master
 mobile/views/pages/following.vue:
   following-of: "Following of {}"
 mobile/views/pages/home.vue:
@@ -966,7 +962,7 @@ mobile/views/pages/share.vue:
   share-with-right: ""
   share-with-left: "Share with "  
 mobile/views/pages/tag.vue:
-  no-posts-found: "No post with hashtag "{}" found."
+  no-posts-found: "No post with hashtag \"{}\" found."
 mobile/views/pages/welcome.vue:
   signup: "Sign up"
 mobile/views/pages/widgets.vue:
