Added partial common/scripts/date-stringify.ts localization
I'd let you check the second half. Also added common lines for that.

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -30,6 +30,12 @@ common:
     months_ago: "{}month(s) ago"
     years_ago: "{}year(s) ago"
   trash: "Trash"
+  date:
+    full-year: "Year"
+    month: "Month"
+    day: "Day"
+    hours: "Hours"
+    minutes: "Minutes"
   weekday-short:
     sunday: "S"
     monday: "M"
