--- a/locales/en.yml
+++ b/locales/en.yml
@@ -17,6 +17,7 @@ common:
     paragraph3: "To delete a widget, <strong>drag and drop the widget onto the area labeled \"Trash\"</strong> in the header."
     paragraph4: "To finish the customization, click \"Finish\" in the upper right."
     gotit: "Got it!"
+  close: "Close"
   notification:
     file-uploaded: "File uploaded!"
     message-from: "Message from {}:"
@@ -793,9 +794,7 @@ desktop/views/pages/search.vue:
   not-available: "The search function can not be used."
   not-found: "No posts were found for '{}'"
 desktop/views/pages/share.vue:
-  share-with-right: ""
-  share-with-left: "Share with "
-  close: "Close"
+  share-with: "Share with {}"
 desktop/views/pages/tag.vue:
   no-posts-found: "No posts \"{}\" found."
 desktop/views/pages/user-list.users.vue:
@@ -1038,6 +1037,8 @@ mobile/views/pages/settings/settings.profile.vue:
 mobile/views/pages/search.vue:
   search: "Search"
   empty: "No posts were found for '{}'"
+desktop/views/pages/share.vue:
+  share-with: "Share with {}."
 mobile/views/pages/selectdrive.vue:
   select-file: "Choose files"
 mobile/views/pages/settings.vue:
