Implement surrender of reversi

--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -182,6 +182,10 @@ common/views/components/games/reversi/reversi.vue:
     waiting-for: "{}を待っています"
     cancel: "キャンセル"
 
+common/views/components/games/reversi/reversi.game.vue:
+  surrender: "投了"
+  surrendered: "投了により"
+
 common/views/components/games/reversi/reversi.index.vue:
   title: "Misskey Reversi"
   sub-title: "他のMisskeyユーザーとリバーシで対戦しよう"
