Localized 2 missing lines for mobile widgets.vue

--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -1195,6 +1195,8 @@ mobile/views/pages/welcome.vue:
 mobile/views/pages/widgets.vue:
   dashboard: "ダッシュボード"
   widgets-hints: "ウィジェットを追加/削除したり並べ替えたりできます。ウィジェットを移動するには「三」をドラッグします。ウィジェットを削除するには「x」をタップします。いくつかのウィジェットはタップすることで表示を変更できます。"
+  add-widget: "追加"
+  customization-tips: "カスタマイズのヒント"
 
 mobile/views/pages/widgets/activity.vue:
   activity: "アクティビティ"
