--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -261,6 +261,7 @@ common/views/components/messaging-room.form.vue:
   send: "送信"
   attach-from-local: "PCからファイルを添付する"
   attach-from-drive: "ドライブからファイルを添付する"
+  only-one-file-attached: "メッセージに添付できるのはひとつのファイルのみです"
 
 common/views/components/messaging-room.message.vue:
   is-read: "既読"
